syntax = "proto3";
import "google/api/annotations.proto";

package pb;
option go_package = "./pb";

message Empty{}

message TestMsg {
  string msg = 1;
  int32  status = 2;
}

service checkStatus{
  rpc getStatus(Empty) returns(TestMsg){
    option(google.api.http) = {
      get: "/test",
    };
  }
  rpc getStatusA(Empty) returns (TestMsg){
    option(google.api.http) = {
      get: "/test/a",
    };
  }
  rpc health(Empty) returns (Empty){
    option(google.api.http) = {
      get: "/health"
    };
  }
}